Replace blank certificate with amended certificate in download button

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <div class="container" id="nav"></div>
 <div class="container" id="container">
 	<canvas id="canvas"></canvas>
-	<!--<div class="alert">-->
-		<!--<div class="form-group">-->
-			<!--<label>Enter the name you would like to have on your certificate.</label>-->
-			<!--<input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Soraya Jones">-->
-		<!--</div>-->
-		<!--<button class="btn btn-primary" onclick="renderNewCertificate(document.getElementById('name').value)">Ok</button>-->
-	<!--</div>-->
-	<!--<div id="certificate">-->
-		 <!--<img src="certificate.png">-->
-	<!--</div>-->
+	<div class="alert">
+		<div class="form-group">
+			<label>Enter the name you would like to have on your certificate.</label>
+			<input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Soraya Jones">
+		</div>
+		<button class="btn btn-primary" onclick="renderNewCertificate(document.getElementById('name').value, 1)">Ok</button>
+	</div>
 </div>
 </body>
 </html>
